--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/Debug
+/Cracking the Coding Interview.vcxproj.user
+/Cracking the Coding Interview.vcxproj.filters
+/Cracking the Coding Interview.vcxproj
+/Cracking the Coding Interview.sln
