Adds Ex02 Array

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Cracking the Coding Interview.vcxproj.filters
 /Cracking the Coding Interview.vcxproj
 /Cracking the Coding Interview.sln
+/x64/Debug
